[ash-md] Removes "Connecting..." suffix from the network and VPN detailed pages rows

BUG=674501
TEST=visual

Review-Url: https://codereview.chromium.org/2587133003
Cr-Commit-Position: refs/heads/master@{#440023}

Former-commit-id: b8902e3db6fc7b4350f4e3490a840d8e32512cec